backup_individuals/sjeng/use_undefined_identifier/c2/see
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/see/src/see.c:736:17: error: use of undeclared identifier 'dword_665668'
v25 = -material[dword_665668[32 * v23 + 2 * v24]]; 
                ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/see/src/see.c:738:16: error: use of undeclared identifier 'dword_665668'
v25 = material[dword_665668[32 * ( unsigned __int64)( v10 == 0) + 2 * v24]]; 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/see/src/obj/see.o] Error 1
